# quarto_mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: templates.yaml
docs/: KROKI_INTEGRATION.md  MERMAID_VALIDATION_SPEC.md  SPEC.md
examples/: USAGE.md  mcp-config.json
src/: __init__.py  __main__.py  server.py
src/converters/: __init__.py  kroki_converter.py
src/core/: __init__.py  file_manager.py  renderer.py  template_manager.py
src/managers/: __init__.py  extension_manager.py  yaml_frontmatter_manager.py
src/models/: __init__.py  formats.py  schemas.py  validation_schemas.py
src/tools/: __init__.py  formats.py  render.py  validate_mermaid.py
src/validators/: __init__.py  mermaid_cli.py  mermaid_extractor.py  mermaid_validator.py  regex_validator.py
tests/: test_basic.py  test_components.py  test_debug.py  test_extension_manager.py  test_integration.py  test_kroki_integration.py  test_mermaid_validation.py  test_renderer_yaml.py  test_templates.py
tests/fixtures/: sample.qmd
